--- a/index.html
+++ b/index.html
@@ -13,23 +13,28 @@
     </h1>
 </header>
 <body>
-    <div class="container">
-            <div class="box" id="box1"></div>
-            <div class="box" id="box2"></div>
-            <div class="box" id="box3"></div>
-            <div class="box" id="box4"></div>
-            <div class="box" id="box5"></div>
-            <div class="box" id="box6"></div>
-            <div class="box" id="box7"></div>
-            <div class="box" id="box8"></div>
-            <div class="box" id="box9"></div>
-            <div class="box" id="box10"></div>
-            <div class="box" id="box11"></div>
-            <div class="box" id="box12"></div>
-            <div class="box" id="box13"></div>
-            <div class="box" id="box14"></div>
-            <div class="box" id="box15"></div>
-            <div class="box" id="box16"></div>
+    <div class="game-container">
+            <div class="card">
+            <div class="back-face">
+                <img class="back-icon" src="/Images/backface.png">
+            </div>
+            <div class="front-face"></div>
+            </div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
+            <div class="card"></div>
     </div>
 
 
