--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <body>
     <div class="game-container">
         <div class="card">
-                    <div class="back-face">
+                    <div class="back-face both-sides">
                         <img class="back-icon" src="/Images/coder.png">
                     </div>
-                    <div class="front-face"></div>
+                    <div class="front-face both-sides"></div>
                     </div>
                     <div class="card"></div>
                     <div class="card"></div>
