replicated back card images for all cards

--- a/index.html
+++ b/index.html
@@ -15,26 +15,103 @@
 <body>
     <div class="game-container">
         <div class="card">
-                    <div class="back-face both-sides">
+                        <div class="back-face both-sides">
                         <img class="back-icon" src="/Images/coder.png">
-                    </div>
-                    <div class="front-face both-sides"></div>
-                    </div>
-                    <div class="card"></div>
-                    <div class="card"></div>
-                    <div class="card"></div>
-                    <div class="card"></div>
-                    <div class="card"></div>
-                    <div class="card"></div>
-                    <div class="card"></div>
-                    <div class="card"></div>
-                    <div class="card"></div>
-                    <div class="card"></div>
-                    <div class="card"></div>
-                    <div class="card"></div>
-                    <div class="card"></div>
-                    <div class="card"></div>
-                    <div class="card"></div>
+                        </div>
+                        <div class="front-face both-sides"></div>
+                        </div>
+        <div class="card">
+                        <div class="back-face both-sides">
+                        <img class="back-icon" src="/Images/coder.png">
+                        </div>
+                        <div class="front-face both-sides"></div>
+                        </div>
+        <div class="card">
+                         <div class="back-face both-sides">
+                         <img class="back-icon" src="/Images/coder.png">
+                         </div>
+                         <div class="front-face both-sides"></div>
+                         </div>
+        <div class="card">
+                        <div class="back-face both-sides">
+                        <img class="back-icon" src="/Images/coder.png">
+                        </div>
+                        <div class="front-face both-sides"></div>
+                        </div>  
+        <div class="card">
+                        <div class="back-face both-sides">
+                        <img class="back-icon" src="/Images/coder.png">
+                        </div>
+                        <div class="front-face both-sides"></div>
+                        </div> 
+        <div class="card">
+                        <div class="back-face both-sides">
+                        <img class="back-icon" src="/Images/coder.png">
+                        </div>
+                        <div class="front-face both-sides"></div>
+                        </div>
+        <div class="card">
+                        <div class="back-face both-sides">
+                        <img class="back-icon" src="/Images/coder.png">
+                        </div>
+                        <div class="front-face both-sides"></div>
+                        </div>
+        <div class="card">
+                        <div class="back-face both-sides">
+                        <img class="back-icon" src="/Images/coder.png">
+                        </div>
+                        <div class="front-face both-sides"></div>
+                        </div>
+        <div class="card">
+                        <div class="back-face both-sides">
+                        <img class="back-icon" src="/Images/coder.png">
+                        </div>
+                        <div class="front-face both-sides"></div>
+                        </div>
+        <div class="card">
+                        <div class="back-face both-sides">
+                        <img class="back-icon" src="/Images/coder.png">
+                        </div>
+                        <div class="front-face both-sides"></div>
+                        </div>
+        <div class="card">
+                        <div class="back-face both-sides">
+                        <img class="back-icon" src="/Images/coder.png">
+                        </div>
+                        <div class="front-face both-sides"></div>
+                        </div>
+        <div class="card">
+                        <div class="back-face both-sides">
+                        <img class="back-icon" src="/Images/coder.png">
+                        </div>
+                        <div class="front-face both-sides"></div>
+                        </div>
+        <div class="card">
+                        <div class="back-face both-sides">
+                        <img class="back-icon" src="/Images/coder.png">
+                        </div>
+                        <div class="front-face both-sides"></div>
+                        </div>
+        <div class="card">
+                        <div class="back-face both-sides">
+                        <img class="back-icon" src="/Images/coder.png">
+                        </div>
+                        <div class="front-face both-sides"></div>
+                        </div>
+        <div class="card">
+                        <div class="back-face both-sides">
+                        <img class="back-icon" src="/Images/coder.png">
+                        </div>
+                        <div class="front-face both-sides"></div>
+                        </div>
+        <div class="card">
+                        <div class="back-face both-sides">
+                        <img class="back-icon" src="/Images/coder.png">
+                        </div>
+                         <div class="front-face both-sides"></div>
+                        </div>
+
+                                        
     </div>
 
 
