using visible to edit front of card

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </header>
 <body>
     <div class="game-container">
-        <div class="card">
+        <div class="card visible">
                         <div class="back-face both-sides">
                         <img class="back-icon" src="/Images/coder.png">
                         </div>
