added first front card icon

--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
     <div class="game-container">
         <div class="card visible">
                         <div class="back-face both-sides">
-                        <img class="back-icon" src="/Images/coder.png">
+                            <img class="back-icon" src="/Images/coder.png">
                         </div>
-                        <div class="front-face both-sides"></div>
+                        <div class="front-face both-sides">
+                            <img class="front-icon" src="/Images/java.png">
+                        </div>
                         </div>
         <div class="card">
                         <div class="back-face both-sides">
