added icons for back of cards

--- a/index.html
+++ b/index.html
@@ -26,91 +26,121 @@
                         <div class="back-face both-sides">
                         <img class="back-icon" src="/Images/coder.png">
                         </div>
-                        <div class="front-face both-sides"></div>
+                        <div class="front-face both-sides">
+                            <img class="front-icon" src="/Images/css.png">
+                        </div>
                         </div>
         <div class="card">
                          <div class="back-face both-sides">
                          <img class="back-icon" src="/Images/coder.png">
                          </div>
-                         <div class="front-face both-sides"></div>
+                         <div class="front-face both-sides">
+                            <img class="front-icon" src="/Images/cplus.png">
+                         </div>
                          </div>
         <div class="card">
                         <div class="back-face both-sides">
                         <img class="back-icon" src="/Images/coder.png">
                         </div>
-                        <div class="front-face both-sides"></div>
+                        <div class="front-face both-sides">
+                            <img class="front-icon" src="/Images/javascript.png">
+                        </div>
                         </div>  
         <div class="card">
                         <div class="back-face both-sides">
                         <img class="back-icon" src="/Images/coder.png">
                         </div>
-                        <div class="front-face both-sides"></div>
+                        <div class="front-face both-sides">
+                            <img class="front-icon" src="/Images/html5.png">
+                        </div>
                         </div> 
         <div class="card">
                         <div class="back-face both-sides">
                         <img class="back-icon" src="/Images/coder.png">
                         </div>
-                        <div class="front-face both-sides"></div>
+                        <div class="front-face both-sides">
+                            <img class="front-icon" src="/Images/react.png">
+                        </div>
                         </div>
         <div class="card">
                         <div class="back-face both-sides">
                         <img class="back-icon" src="/Images/coder.png">
                         </div>
-                        <div class="front-face both-sides"></div>
+                        <div class="front-face both-sides">
+                            <img class="front-icon" src="/Images/python.png">
+                        </div>
                         </div>
         <div class="card">
                         <div class="back-face both-sides">
                         <img class="back-icon" src="/Images/coder.png">
                         </div>
-                        <div class="front-face both-sides"></div>
+                        <div class="front-face both-sides">
+                            <img class="front-icon" src="/Images/php.png">
+                        </div>
                         </div>
         <div class="card">
                         <div class="back-face both-sides">
                         <img class="back-icon" src="/Images/coder.png">
                         </div>
-                        <div class="front-face both-sides"></div>
+                        <div class="front-face both-sides">
+                            <img class="front-icon" src="/Images/java.png">
+                        </div>
                         </div>
         <div class="card">
                         <div class="back-face both-sides">
                         <img class="back-icon" src="/Images/coder.png">
                         </div>
-                        <div class="front-face both-sides"></div>
+                        <div class="front-face both-sides">
+                            <img class="front-icon" src="/Images/css.png">
+                        </div>
                         </div>
         <div class="card">
                         <div class="back-face both-sides">
                         <img class="back-icon" src="/Images/coder.png">
                         </div>
-                        <div class="front-face both-sides"></div>
+                        <div class="front-face both-sides">
+                            <img class="front-icon" src="/Images/cplus.png">
+                         </div>
+                         </div>
+        <div class="card">
+                        <div class="back-face both-sides">
+                        <img class="back-icon" src="/Images/coder.png">
+                        </div>
+                        <div class="front-face both-sides">
+                            <img class="front-icon" src="/Images/javascript.png">
+                        </div>
+                        </div> 
+        <div class="card">
+                        <div class="back-face both-sides">
+                        <img class="back-icon" src="/Images/coder.png">
+                        </div>
+                        <div class="front-face both-sides">
+                            <img class="front-icon" src="/Images/html5.png">
+                        </div>
+                        </div> 
+        <div class="card">
+                        <div class="back-face both-sides">
+                        <img class="back-icon" src="/Images/coder.png">
+                        </div>
+                        <div class="front-face both-sides">
+                            <img class="front-icon" src="/Images/react.png">
+                        </div>
                         </div>
         <div class="card">
                         <div class="back-face both-sides">
                         <img class="back-icon" src="/Images/coder.png">
                         </div>
-                        <div class="front-face both-sides"></div>
+                        <div class="front-face both-sides">
+                            <img class="front-icon" src="/Images/python.png">
+                        </div>
                         </div>
         <div class="card">
                         <div class="back-face both-sides">
                         <img class="back-icon" src="/Images/coder.png">
                         </div>
-                        <div class="front-face both-sides"></div>
+                        <div class="front-face both-sides">
+                            <img class="front-icon" src="/Images/php.png">
                         </div>
-        <div class="card">
-                        <div class="back-face both-sides">
-                        <img class="back-icon" src="/Images/coder.png">
-                        </div>
-                        <div class="front-face both-sides"></div>
-                        </div>
-        <div class="card">
-                        <div class="back-face both-sides">
-                        <img class="back-icon" src="/Images/coder.png">
-                        </div>
-                        <div class="front-face both-sides"></div>
-                        </div>
-        <div class="card">
-                        <div class="back-face both-sides">
-                        <img class="back-icon" src="/Images/coder.png">
-                        </div>
-                         <div class="front-face both-sides"></div>
                         </div>
 
                                         
