--- a/index.html
+++ b/index.html
@@ -7,14 +7,22 @@
     <link rel="stylesheet" href="style.css">
     <title>Memory Match</title>
 </head>
-<header>
-    <h1>
+ <h1 class="gametitle">
         Memory Match
     </h1>
+    <div class="overlay-text visible"> Click to start
+    </div>
+    <div id="game-over-text"class="overlay-text"> Game Over
+    <span class="overlay-text-small">Click to Restart</span>
+    </div>
+     <div id="victory-text"class="overlay-text"> You Win!
+    <span class="overlay-text-small">Click to Restart</span>
+    </div>
+<header>
 </header>
 <body>
     <div class="game-container">
-        <div class="card visible">
+        <div class="card">
                         <div class="back-face both-sides">
                             <img class="back-icon" src="/Images/coder.png">
                         </div>
